kdrive: fix dixflags so they're always defined before enqueuing events #17734

If absolute events were posted, dixflags got set conditionally on whether the
valuators are different from the last posted set of values.
If dixflags are undefined however, the DIX interprets them as relative
valuators. Fix this by making sure defining dixflags is always defined.

X.Org Bug 17724 <http://bugs.freedesktop.org/show_bug.cgi?id=17734>