hw/kdrive/src/kinput.c
@@ -2105,13 +2105,17 @@ KdEnqueuePointerEvent(KdPointerInfo *pi, unsigned long flags, int rx, int ry,
     if (flags & KD_MOUSE_DELTA)
     {
         if (x || y || z)
+        {
             dixflags = POINTER_RELATIVE | POINTER_ACCELERATE;
-    } else if (x != pi->dixdev->last.valuators[0] ||
-                y != pi->dixdev->last.valuators[1])
-            dixflags = POINTER_ABSOLUTE;
-
-    if (dixflags)
-        _KdEnqueuePointerEvent(pi, MotionNotify, x, y, z, 0, dixflags, FALSE);
+            _KdEnqueuePointerEvent(pi, MotionNotify, x, y, z, 0, dixflags, FALSE);
+        }
+    } else
+    {
+        dixflags = POINTER_ABSOLUTE;
+        if (x != pi->dixdev->last.valuators[0] ||
+            y != pi->dixdev->last.valuators[1])
+            _KdEnqueuePointerEvent(pi, MotionNotify, x, y, z, 0, dixflags, FALSE);
+    }
 
     buttons = flags;
 
